# Ultimate-Tic-Tac-Toe-Solver

./: CMakeLists.txt  README.md  game
include/: Board.h  TranspositionTable.h  functions.h
src/: Board.cpp  TranspositionTable.cpp  heuristic_functions.cpp  main.cpp  minimax.cpp
